--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-material": "^1.0.0-beta-7",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.3.15",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "material-design-icons-iconfont": "^4.0.3",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
