--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue": "^2.5.2",
-    "vue-material": "^1.0.0-beta-7",
+    "pug": "^2.0.3",
+    "vue": "^2.5.21",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.15",
@@ -46,7 +46,7 @@
     "html-webpack-plugin": "^2.30.1",
     "material-design-icons-iconfont": "^4.0.3",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -61,7 +61,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.5.21",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
