--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.21",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.0.1",
+    "vuebar": "0.0.20",
     "vuetify": "^1.3.15",
     "vuex": "^3.0.1"
   },
